<resources>
    <string name="app_name">TrainingTracker</string>

    //Bottom nav bar
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_workouts">Workouts</string>
    <string name="nav_bar_train">WORK OUT</string>
    <string name="nav_bar_exercises">Exercises</string>
    <string name="nav_bar_more">More</string>

    //Workout strings
    <string name="workout_tab">Workouts</string>

    <string name="workout_creator">Create custom workout</string>
    <string name="workout_creator_button1">Create new workout</string>
    <string name="workout_creator_button2">Save</string>
    <string name="workout_creator_button3">Cancel</string>

    <string name="workout_block_creator">Create a workout block</string>
    <string name="workout_block_sets">Select number of sets</string>
    <string name="workout_block_sets_dec">—</string>
    <string name="workout_block_sets_inc">+</string>
    <string name="workout_block_sets_hint">Enter a number</string>
    <string name="workout_block_list">Select exercises</string>
    <string name="workout_block_button">Add block to workout</string>
    <string name="workout_block_button2">Preview Block</string>

    <string name="workout_detail_view">Workout name</string>
    <string name="workout_detail_view_button">Start workout</string>
    <string name="workout_detail_view_button2">Edit</string>
    <string name="workout_detail_view_button3">Remove</string>

    <string name="workout_list_item_name">Workout name</string>
    <string name="workout_list_item_description">Workout description</string>
    <string name="workout_list_item_blocks">n blocks</string>

    <string name="current_active_workout_label">Current Workout</string>
    <string name="start_active_workout_button">Start Workout</string>
    <string name="active_workout_pause_button">Pause Workout (Hold to COMPLETE workout)</string>

    //Exercise strings
    <string name="exercises_tab">Exercises</string>

    <string name="exercise_creator">Custom Exercise</string>
    <string name="exercise_creator_name1">Name:</string>
    <string name="exercise_creator_name2">Name</string>
    <string name="exercise_creator_unit1">Unit:</string>
    <string name="exercise_creator_unit2">reps, meters, seconds…</string>
    <string name="exercise_creator_description1">Description:</string>
    <string name="exercise_creator_description2">Description</string>
    <string name="exercise_creator_instructions1">Instructions:</string>
    <string name="exercise_creator_instructions2">Instructions</string>
    <string name="exercise_creator_button">Create new exercise</string>
    <string name="exercise_cancel_edit_button">Cancel</string>
    <string name="exercise_save_button">Save</string>
    <string name="exercise_edit_button">Edit</string>
    <string name="exercise_remove_button">Remove</string>

    <string name="exercise_detail_view">Exercise name</string>
    <string name="exercise_detail_view_categories">Categories:</string>
    <string name="exercise_detail_view_unit">Unit:</string>

    <string name="exercise_list_item_name">Exercise name</string>
    <string name="exercise_list_item_description">Exercise description</string>
    <string name="exercise_list_item_unit">Amount + Reps</string>

    <string name="settings_tab">Settings</string>
    <string name="achievements_tab">Achievements</string>
    <string name="pre_active_workout_tab">Select a workout</string>
    <string name="active_workout_tab">Current workout</string>
    <string name="user_statistics_tab">User Statistics</string>
    <string name="more_tab">More</string>
    <string name="user_info">User info</string>
    <string name="user_info_username">Username:</string>
    <string name="user_info_name">Name:</string>
    <string name="user_info_weight">Weight:</string>
    <string name="user_info_height">Height:</string>

    <string name="challenge_finish">Finish</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Donec id tortor condimentum, tincidunt nunc eu, pellentesque metus. Sed et viverra lacus.
        Aliquam quis urna vel nisi aliquet aliquam quis magna.</string>
    
</resources>
