<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exerciseNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/exercise_detail_view"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exerciseUnitTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/exercise_detail_view_unit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseNameTextView" />

    <TextView
        android:id="@+id/exerciseCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/exercise_detail_view_category"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseUnitTextView" />
    <TextView
        android:id="@+id/exerciseDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="84dp"
        android:text="@string/lorem_ipsum"
        android:textSize="18sp"
        android:textStyle="bold"
        android:scrollbars="vertical"
        android:background="?attr/colorBackgroundFloating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseUnitTextView" />

    <TextView
        android:id="@+id/exerciseInstructionsTextView"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="22dp"
        android:text="@string/lorem_ipsum"
        android:textSize="18sp"
        android:textStyle="bold"
        android:scrollbars="vertical"
        android:background="?attr/colorBackgroundFloating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseDescriptionTextView" />

    <Button
        android:id="@+id/removeExerciseButton"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="72dp"
        android:text="@string/exercise_remove_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@android:color/holo_red_light" />

    <Button
        android:id="@+id/editExerciseButton"
        android:visibility="gone"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/exercise_edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>