<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ExerciseCreatorFragment">

    <TextView
        android:text="@string/exercise_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exerciseNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/exercise_creator_name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exerciseUnitEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/exercise_creator_unit"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseNameEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/exercise_creator_description1"
        app:layout_constraintBottom_toTopOf="@+id/exerciseDescriptionEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/exerciseDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextArea"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/exercise_creator_description2"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseUnitEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/exercise_creator_instructions1"
        app:layout_constraintBottom_toTopOf="@+id/exerciseInstructionsEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/exerciseInstructionsEditText"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextArea"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/exercise_creator_instructions2"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseDescriptionEditText" />

    <Button
        android:id="@+id/createExerciseButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="36dp"
        android:text="@string/exercise_creator_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelEditExerciseButton"
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="72dp"
        android:text="Cancel"
        android:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/saveExerciseButton"
        android:visibility="gone"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="72dp"
        android:text="Save"
        android:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>