<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/workoutNameEditText"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:hint="Name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:inputType="textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/workoutDescriptionEditText"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Short description"
        android:inputType="textCapSentences|textMultiLine"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutNameEditText" />

    <TextView
        android:id="@+id/workoutNameTextView"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/workout_detail_view"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workoutDescriptionTextView"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/lorem_ipsum"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutNameTextView" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="171dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWorkoutBlockButton">

        <ListView
            android:id="@+id/workoutBlocksListView"
            android:layout_width="match_parent"
            android:layout_height="377dp" />

    </LinearLayout>

    <Button
        android:id="@+id/addWorkoutBlockButton"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="48dp"
        android:background="?android:attr/colorAccent"
        android:text="Add workoutblock"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutDescriptionEditText" />


    <Button
        android:id="@+id/removeWorkoutButton"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="136dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="Remove"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editWorkoutButton"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="280dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelEditWorkoutButton"
        android:layout_width="88dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="Cancel"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveWorkoutButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="Save"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startWorkoutButton"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/colorAccent"
        android:text="@string/workout_detail_view_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>